Add PersonByID endpoint.

--- a/gosrc/config/config.json
+++ b/gosrc/config/config.json
@@ -1,5 +1,6 @@
 {
     "sql-engine":"sqlite3",
     "config-dir":"./config/",
-    "data-dir":"./data/"
+    "data-dir":"./data/",
+    "db-file":"./chanteys.db"
 }
